--- a/css/styles.css
+++ b/css/styles.css
@@ -5,15 +5,15 @@
 }
 
 body {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
-   background: rgb(252, 254, 148); /* The Fallback */
-   background:rgba(252, 254, 148, 0.3); 
+   background: #D7CCC8;
+   color: #212121;
 }
 
 .page-content {
   padding-top: 2em;
 }
+
 
 .container {
   max-width: 50em;
@@ -21,26 +21,47 @@ body {
 }
 
 h1 {
-  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 30px;
   margin-bottom: 20px;
-  font-size: 2.5em;
+  font-size: 1.5em;
+  color: #FFFFFF; 
+  display: inline-block;
 }
 
 .Grid {
-  display: flex;
-  flex-wrap: wrap;
-   -webkit-align-items: center;
-   align-items: center;
-   -webkit-justify-content: center;
-   justify-content: center; 
-   background: rgb(200, 54, 54); /* The Fallback */
-   background: rgba(200, 54, 54, 0.08); 
+   display: -webkit-flex;
+   display: flex;
+   -webkit-flex-direction: column;
+   flex-direction: column;
+   background-color: #795548; 
 }
 
-.large-Grid--full {
-  flex: 1;
-  margin: 20px 10px;
+
+.mini-grid {
+  display: -webkit-flex;
+   display: flex;
+   -webkit-flex-direction: row;
+   flex-direction: row;
 }
+
+.header-div {
+  /* This will be twice as big as the small item. */
+   -webkit-flex: 2 0 0; 
+   flex: 2 0 0; 
+}
+
+.header-buttons-div {
+   display: -webkit-flex;
+   display: flex;
+   -webkit-flex-direction: column;
+   flex-direction: column;
+   -webkit-align-items: flex-end;
+   align-items: flex-end;
+   -webkit-flex: 1 0 0;
+   flex: 1 0 0;  /* Small item. */
+}
+
 
 h2, h3, p {
   text-align: center;
