--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body {
   font-weight: 300;
    background: #D7CCC8;
    color: #212121;
+   font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .page-content {
@@ -21,7 +22,6 @@ body {
 }
 
 h1 {
-  font-family: Arial, Helvetica, sans-serif;
   margin-left: 30px;
   margin-bottom: 20px;
   font-size: 1.5em;
@@ -62,33 +62,10 @@ h1 {
    flex: 1 0 0;  /* Small item. */
 }
 
-
-h2, h3, p {
-  text-align: center;
-}
-
-.fa {
-  font-size: 2em;
-}
-
-img {
- height: 160px;
- margin-top: -30px;
- margin-left: 60px;
-}
-
-.fix{
-  margin-top: -50px;
-}
 p {
   font-weight: bold;
 }
-#temp{
-  color: blue;
-}
 
 @media only screen and (max-width: 420px) {
-  .large-Grid--full {
-    flex: 100%;
-  }
+  
 }
