--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,8 @@ h1 {
    -webkit-flex-direction: column;
    flex-direction: column;
    background-color: #795548; 
-   margin-bottom: 20px;
+   border-top: 2px solid #5D4037;
+   border-bottom: 2px solid #5D4037;
 }
 
 
@@ -50,10 +51,13 @@ h1 {
    display: flex;
    -webkit-flex-direction: row;
    flex-direction: row;
+    align-items: center;
+   -webkit-justify-content: center;
+   justify-content: center;
 }
 
 .grid-items {
-     padding: 10px;
+     padding-left: 20px;
      background-color: #BDBDBD;
     border-bottom: 2px solid #FFFFFF;
     border-top: 2px solid #FFFFFF;
@@ -80,6 +84,7 @@ h1 {
    /* This will be twice as big as the small item. */
    -webkit-flex: 1 0 0; 
    flex: 1 0 0; 
+   color: blue;
 }
 
 .content-item {
@@ -88,6 +93,7 @@ h1 {
    align-items: flex-start;
    -webkit-flex: 2 0 0;
    flex: 2 0 0;  /* Small item. */
+   color: #757575;
 }
 
 p {
