--- a/css/styles.css
+++ b/css/styles.css
@@ -6,15 +6,14 @@
 
 body {
   font-weight: 300;
-   background: #D7CCC8;
-   color: #212121;
-   font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background: #D7CCC8;
+  color: #212121;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .page-content {
   padding-top: 2em;
 }
-
 
 .container {
   max-width: 50em;
@@ -25,89 +24,91 @@ h1 {
   margin-left: 30px;
   margin-bottom: 20px;
   font-size: 1.5em;
-  color: #FFFFFF; 
+  color: #FFFFFF;
   display: inline-block;
 }
 
 .Grid {
-   display: -webkit-flex;
-   display: flex;
-   -webkit-flex-direction: column;
-   flex-direction: column;
-   background-color: #795548; 
-   border-top: 2px solid #5D4037;
-   border-bottom: 2px solid #5D4037;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  background-color: #795548;
+  border-top: 2px solid #5D4037;
+  border-bottom: 2px solid #5D4037;
 }
-
 
 .Grid::after {
   content: " ";
-  background-color: #795548; 
+  background-color: #795548;
   height: 30px;
 }
 
 .mini-grid {
-   padding-left: 20px;
+  padding-left: 20px;
   display: -webkit-flex;
-   display: flex;
-   -webkit-flex-direction: row;
-   flex-direction: row;
-    align-items: center;
-   -webkit-justify-content: center;
-   justify-content: center;
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
 }
 
 .grid-items {
-     background-color: #BDBDBD;
-    border-bottom: 2px solid #FFFFFF;
-    border-top: 2px solid #FFFFFF;
+  background-color: #BDBDBD;
+  border-bottom: 2px solid #FFFFFF;
+  border-top: 2px solid #FFFFFF;
 }
 
 .header-div {
   /* This will be twice as big as the small item. */
-   -webkit-flex: 2 0 0; 
-   flex: 2 0 0; 
+  -webkit-flex: 2 0 0;
+  flex: 2 0 0;
 }
 
 .header-buttons-div {
-   display: -webkit-flex;
-   display: flex;
-   -webkit-flex-direction: column;
-   flex-direction: column;
-   -webkit-align-items: flex-end;
-   align-items: flex-end;
-   -webkit-flex: 1 0 0;
-   flex: 1 0 0;  /* Small item. */
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-align-items: flex-end;
+  align-items: flex-end;
+  -webkit-flex: 1 0 0;
+  flex: 1 0 0;
+  /* Small item. */
 }
 
-.content-header{
-   /* This will be twice as big as the small item. */
-   -webkit-flex: 1 0 0; 
-   flex: 1 0 0; 
-   color: blue;
+.content-header {
+  /* This will be twice as big as the small item. */
+  -webkit-flex: 1 0 0;
+  flex: 1 0 0;
+  color: blue;
 }
 
 .content-item {
-   display: -webkit-flex;
-   display: flex;
-   -webkit-flex-direction: column;
-   flex-direction: column;
-   -webkit-flex: 2 0 0;
-   flex: 2 0 0;  /* Small item. */
-   color: #757575;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex: 2 0 0;
+  flex: 2 0 0;
+  /* Small item. */
+  color: #FFFFFF;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 p {
   font-weight: bold;
 }
 
-.green-active{
-  background-color: #4CAF50; 
+.green-active {
+  background-color: #4CAF50;
 }
+
 .black {
   color: #212121;
 }
 
-@media only screen and (max-width: 420px) {
-  
-}
+@media only screen and (max-width: 420px) {}
