--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 
 body {
   font-weight: 300;
-  background: #D7CCC8;
+  background: #FFFFFF;
   color: #212121;
   font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -33,14 +33,23 @@ h1 {
   display: flex;
   -webkit-flex-direction: column;
   flex-direction: column;
-  background-color: #795548;
-  border-top: 2px solid #5D4037;
-  border-bottom: 2px solid #5D4037;
+  background-color: #616161;
+  border: 2px solid #212121;
+  border-radius: 5px;
+  webkit-box-shadow: 3px 3px 5px 6px #1C2331;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+  -moz-box-shadow:    3px 3px 5px 6px #1C2331;  /* Firefox 3.5 - 3.6 */
+  box-shadow:         3px 3px 5px 6px #1C2331;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+  
+}
+
+img {
+  border: 1px solid #616161; 
+   border-radius: 2px;
 }
 
 .Grid::after {
   content: " ";
-  background-color: #795548;
+  background-color: #616161;
   height: 30px;
 }
 
@@ -57,8 +66,8 @@ h1 {
 
 .grid-items {
   background-color: #BDBDBD;
-  border-bottom: 2px solid #FFFFFF;
-  border-top: 2px solid #FFFFFF;
+  border-bottom: 1.5px solid #212121;
+  border-top: 1.5px solid #212121;
 }
 
 .header-div {
@@ -101,14 +110,16 @@ h1 {
 
 p {
   font-weight: bold;
+  color: #263238;
 }
 
 .green-active {
-  background-color: #4CAF50;
+  background-color: #e0f7fa;
+  color: black;
 }
 
 .black {
-  color: #212121;
+  color: #4285F4;
 }
 
 @media only screen and (max-width: 420px) {}
