--- a/css/styles.css
+++ b/css/styles.css
@@ -125,26 +125,25 @@ p {
 button {
   height: 44px;
   border-radius: 2px;
+  margin-right: 15px;
+  width: 100px;
   
 }
 
 #all {
-  background-color: #33b5e5;
-  width: 100px;
+  background-color: #33b5e5; 
   margin-bottom: 5px;
   margin-top: 5px;
 
 }
 
 #online {
-  width: 50px;
   margin-bottom: 5px;
   background-color: #bdbdbd;
 
 }
 
 #offline {
- width: 50px;
  margin-bottom: 5px;
  background-color:  #bdbdbd;
 }
