--- a/css/styles.css
+++ b/css/styles.css
@@ -153,4 +153,18 @@ button {
     margin-right: 20px;
   }
 
+  .Grid {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  background-color: #616161;
+  border: 2px solid #212121;
+  border-radius: 5px;
+  webkit-box-shadow: 1px 1px 2px 3px #1C2331;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+  -moz-box-shadow:    1px 1px 2px 3px #1C2331;  /* Firefox 3.5 - 3.6 */
+  box-shadow:         1px 1px 2px 3px #1C2331;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+  
+}
+
 }
