--- a/css/styles.css
+++ b/css/styles.css
@@ -43,8 +43,9 @@ h1 {
 }
 
 img {
-  border: 1px solid #616161; 
+   border: 2px solid #616161; 
    border-radius: 2px;
+   margin-left: 18px;
 }
 
 .Grid::after {
