--- a/css/styles.css
+++ b/css/styles.css
@@ -167,5 +167,8 @@ button {
   box-shadow:         1px 1px 2px 3px #1C2331;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
   
 }
+img {
+  display: block;
+}
 
 }
